# Intel-8080-Emulator

./: .travis.yml  CMakeLists.txt  LICENSE  README.md  common_functions.c  common_functions.h  cpu.c  cpu.h  main.c  memory.c  memory.h  ram.c  ram.h  registers.c  registers.h
handlers/: data_transfer_handler.c
matcher/: instruction_template.c  instruction_template.h  matcher.c  matcher.cpp  matcher.h
opcodes/: data_transfer.c  data_transfer.h  move.c  move.h
src/: common_functions.c  common_functions.h  cpu.c  cpu.h  data_bus.c  data_bus.h  flags.c  flags.h  log.c  log.h  main.c  opcode_definitions.c  opcode_definitions.h  ram.c  ram.h  registers.c  registers.h
src/handlers/: data_transfer_handler.c  data_transfer_handler.h
src/matcher/: instruction_template.c  instruction_template.h  matcher.c  matcher.h
src/opcodes/: data_transfer.c  data_transfer.h  miscellaneous.c  miscellaneous.h  stack.c  stack.h
src/opcodes/arithmetic/: add.c  add.h  increment.c  increment.h  miscellaneous_arithmetic.c  miscellaneous_arithmetic.h  sub.c  sub.h
src/opcodes/branch/: call.c  call.h  jump.c  jump.h  miscellaneous_branch.c  miscellaneous_branch.h
src/opcodes/logical/: bitwise.c  bitwise.h  miscellaneous_logical.c  miscellaneous_logical.h
src/pins/: address_bus.c  address_bus.h  data_bus.c  data_bus.h  pins.c  pins.h
tests/: CMakeLists.txt  data_transfer_tests.c  edge_tests.c  flag_tests.c  instruction_template_tests.c  matcher_argument_run_tests.c  matcher_run_tests.c  matcher_simple_run_tests.c  matcher_tests.c
tests/matcher/: instruction_template_tests.c  matcher_argument_run_tests.c  matcher_simple_run_tests.c  matcher_tests.c
tests/opcodes/: add_tests.c  data_transfer_tests.c  increment_tests.c  miscellaneous_arithmetic_tests.c  miscellaneous_tests.c  stack_tests.c  sub_test.c
tests/opcodes/arithmetic/: add_tests.c  increment_tests.c  miscellaneous_arithmetic_tests.c  sub_test.c
tests/opcodes/branch/: call_tests.c  jump_tests.c  miscellaneous_branch_tests.c
tests/opcodes/logical/: bitwise_tests.c  miscellaneous_logical_tests.c
