enable_testing()

add_executable(data_transfer_tests ../src/common_functions.c ../src/ram.c ../src/registers.c ../src/opcodes/data_transfer.c opcodes/data_transfer_tests.c)
add_executable(add_tests ../src/common_functions.c ../src/ram.c ../src/registers.c ../src/flags.c ../src/opcodes/arithmetic/add.c opcodes/arithmetic/add_tests.c)
add_executable(sub_tests ../src/common_functions.c ../src/ram.c ../src/registers.c ../src/flags.c ../src/opcodes/arithmetic/sub.c opcodes/arithmetic/sub_test.c)
add_executable(increment_tests ../src/common_functions.c ../src/ram.c ../src/registers.c ../src/flags.c ../src/opcodes/arithmetic/increment.c opcodes/arithmetic/increment_tests.c)
add_executable(miscellaneous_arithmetic_tests ../src/common_functions.c ../src/ram.c ../src/registers.c ../src/flags.c ../src/opcodes/arithmetic/miscellaneous_arithmetic.c opcodes/arithmetic/miscellaneous_arithmetic_tests.c)
add_executable(bitwise_tests ../src/common_functions.c ../src/ram.c ../src/registers.c ../src/flags.c ../src/opcodes/logical/bitwise.c opcodes/logical/bitwise_tests.c)
add_executable(miscellaneous_logical_tests ../src/common_functions.c ../src/ram.c ../src/registers.c ../src/flags.c ../src/opcodes/logical/miscellaneous_logical.c opcodes/logical/miscellaneous_logical_tests.c)
add_executable(jump_tests ../src/common_functions.c ../src/ram.c ../src/registers.c ../src/flags.c ../src/opcodes/branch/jump.c opcodes/branch/jump_tests.c)
add_executable(call_tests ../src/common_functions.c ../src/ram.c ../src/registers.c ../src/flags.c ../src/opcodes/stack.c ../src/opcodes/branch/call.c opcodes/branch/call_tests.c)
add_executable(miscellaneous_branch_tests ../src/common_functions.c ../src/ram.c ../src/registers.c ../src/flags.c ../src/opcodes/stack.c ../src/opcodes/branch/miscellaneous_branch.c opcodes/branch/miscellaneous_branch_tests.c)
add_executable(stack_tests ../src/common_functions.c ../src/ram.c ../src/registers.c ../src/flags.c ../src/opcodes/stack.c opcodes/stack_tests.c)
add_executable(miscellaneous_tests ../src/common_functions.c ../src/ram.c ../src/registers.c ../src/opcodes/miscellaneous.c opcodes/miscellaneous_tests.c)

add_executable(matcher_tests ../src/common_functions.c ../src/registers.c ../src/matcher/instruction_template.c ../src/matcher/matcher.c matcher/matcher_tests.c)
add_executable(instruction_template_tests ../src/matcher/instruction_template.c matcher/instruction_template_tests.c)
add_executable(matcher_simple_run_tests ../src/common_functions.c ../src/registers.c ../src/matcher/instruction_template.c ../src/matcher/matcher.c matcher/matcher_simple_run_tests.c)
add_executable(matcher_argument_run_tests ../src/common_functions.c ../src/registers.c ../src/matcher/instruction_template.c ../src/matcher/matcher.c matcher/matcher_argument_run_tests.c)

add_executable(flag_tests ../src/common_functions.c ../src/ram.c ../src/registers.c ../src/flags.c flag_tests.c)

target_link_libraries(matcher_tests m)
target_link_libraries(instruction_template_tests m)
target_link_libraries(matcher_simple_run_tests m)
target_link_libraries(matcher_argument_run_tests m)

add_test(data_transfer_tests data_transfer_tests)
add_test(add_tests add_tests)
add_test(sub_tests sub_tests)
add_test(miscellaneous_arithmetic_tests miscellaneous_arithmetic_tests)
add_test(increment_tests increment_tests)
add_test(bitwise_tests bitwise_tests)
add_test(miscellaneous_logical_tests miscellaneous_logical_tests)
add_test(jump_tests jump_tests)
add_test(call_tests call_tests)
add_test(miscellaneous_branch_tests miscellaneous_branch_tests)
add_test(stack_tests stack_tests)
add_test(miscellaneous_tests miscellaneous_tests)

add_test(matcher_tests matcher_tests)
add_test(instruction_template_tests instruction_template_tests)
add_test(matcher_simple_run_tests matcher_simple_run_tests)
add_test(matcher_argument_run_tests matcher_argument_run_tests)
